--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@
 
     // ===== Send click handlers
     function openWA(text){
-      const url = 'https://wa.me/?text=' + encodeURIComponent(text);
+      const url = 'https://wa.me/6287831914759?text=' + encodeURIComponent(text);
       window.open(url, '_blank');
     }
     function openTG(text){
-      const url = 'https://t.me/share/url?url=' + encodeURIComponent('') + '&text=' + encodeURIComponent(text);
+      const url = 'https://t.me/AISSOFFICIALL?url=' + encodeURIComponent('') + '&text=' + encodeURIComponent(text);
       window.open(url, '_blank');
     }
 
