--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <header>
     <div class="wrap nav">
-      <div class="brand"><span class="spark"></span> <span>HostoX</span></div>
+      <div class="brand"><span class="spark"></span> <span>AissOfficial/span></div>
       <div class="cta">
         <button class="ghost" onclick="document.getElementById('guideOverlay').classList.add('show')">Panduan</button>
       </div>
@@ -338,7 +338,7 @@
   </main>
 
   <footer>
-    © <span id="year"></span> HostoX. Dibuat dengan cinta dan sedikit kafein.
+    © <span id="year"></span> Aiss Official. Dibuat agar memudahkan customer memilih sesuai selera.
   </footer>
 
   <script>
