--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <header>
     <div class="wrap nav">
-      <div class="brand"><span class="spark"></span> <span>AissOfficial/span></div>
+      <div class="brand"><span class="spark"></span> <span>AissOfficial</span></div>
       <div class="cta">
         <button class="ghost" onclick="document.getElementById('guideOverlay').classList.add('show')">Panduan</button>
       </div>
