--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Harga Hosting / Bot / Panel / VPS</title>
-  <meta name="description" content="Daftar harga sewa bot, jasa bikin bot, panel, dan VPS. Order mudah via WhatsApp atau Telegram." />
+  <meta name="description" content="Daftar harga sewa bot, jadi bot, panel, dan VPS. Order mudah via WhatsApp atau Telegram." />
   <style>
     :root{
       --bg: #0b0f14;
@@ -113,7 +113,7 @@
   <div class="overlay" id="guideOverlay" aria-modal="true" role="dialog">
     <div class="guide shine">
       <h2>Selamat Datang! 👋</h2>
-      <p>Ini adalah portal cepat untuk <b>sewa bot</b>, <b>jasa bikin bot</b>, <b>panel</b>, dan <b>VPS</b>. Klik setiap judul kategori untuk membuka <i>slide harga</i>, pilih paket, lalu kirim request via WhatsApp/Telegram.</p>
+      <p>Ini adalah portal cepat untuk <b>sewa bot</b>, <b>jadi bot</b>, <b>panel</b>, dan <b>VPS</b>. Klik setiap judul kategori untuk membuka <i>slide harga</i>, pilih paket, lalu kirim request via WhatsApp/Telegram.</p>
       <div class="chips">
         <span class="chip">1️⃣ Klik judul kategori</span>
         <span class="chip">2️⃣ Pilih paket</span>
@@ -152,47 +152,140 @@
 
     <section class="section">
       <div class="grid" id="pricing">
-        <!-- KATEGORI 1: Sewa Bot -->
+        <!-- KATEGORI 1: Sewa Bot Reguler -->
         <div class="accordion shine" data-acc>
           <div class="acc-head" role="button" aria-expanded="false">
             <div>
-              <div class="acc-title">🤖 Sewa Bot</div>
-              <div class="acc-desc">Bot WhatsApp/Telegram siap pakai, 24/7 online</div>
+              <div class="acc-title">🤖 Sewa Bot Reguler</div>
+              <div class="acc-desc">Bot WhatsApp siap pakai, 24 online</div>
             </div>
             <svg class="chev" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
           </div>
           <div class="acc-body">
             <div class="acc-body-inner">
               <div class="card">
-                <div class="badge">WhatsApp</div>
-                <div class="title">Bot Basic</div>
-                <div class="muted">Fitur umum, auto-reply, menu</div>
-                <div class="price">Rp 25.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="WA Basic" data-price="25000">Pilih Paket</button>
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Reguler</div>
+                <div class="muted">Limit Terbatas Tanpa Akses Premium</div>
+                <div class="price">Rp 3.000 / 2 Minggu</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Reguler" data-price="3000">Pilih Paket</button>
               </div>
               <div class="card">
-                <div class="badge">Telegram</div>
-                <div class="title">Bot Pro</div>
-                <div class="muted">Command lanjutan, anti-spam</div>
-                <div class="price">Rp 40.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="TG Pro" data-price="40000">Pilih Paket</button>
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Reguler</div>
+                <div class="muted">Limit Terbatas Tanpa Akses Premium</div>
+                <div class="price">Rp 6.000 / 1 bln</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Reguler" data-price="6000">Pilih Paket</button>
               </div>
               <div class="card">
-                <div class="badge">Cross-Platform</div>
-                <div class="title">Bot Enterprise</div>
-                <div class="muted">Monitoring, uptime SLA</div>
-                <div class="price">Rp 90.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Enterprise" data-price="90000">Pilih Paket</button>
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Reguler</div>
+                <div class="muted">Limit Terbatas Tanpa Akses Premium</div>
+                <div class="price">Rp 10.000 / 2 bln</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Reguler" data-price="10000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Reguler</div>
+                <div class="muted">Limit Terbatas Tanpa Akses Premium</div>
+                <div class="price">Rp 17.000 / permanen</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Reguler" data-price="17000">Pilih Paket</button>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- KATEGORI 2: Jasa Bikin Bot -->
+        <!-- KATEGORI 2: Sewa Bot Premium -->
         <div class="accordion shine" data-acc>
           <div class="acc-head" role="button" aria-expanded="false">
             <div>
-              <div class="acc-title">🧩 Jasa Bikin Bot</div>
+              <div class="acc-title">🤖 Sewa Bot Premium</div>
+              <div class="acc-desc">Bot WhatsApp siap pakai, 24 online</div>
+            </div>
+            <svg class="chev" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+          </div>
+          <div class="acc-body">
+            <div class="acc-body-inner">
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Premium</div>
+                <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
+                <div class="price">Rp 5.000 / 2 Minggu</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="5000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Premium</div>
+                <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
+                <div class="price">Rp 9.000 / 1 bln</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="9000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Premium</div>
+                <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
+                <div class="price">Rp 12.000 / 2 bln</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="12000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Reguler</div>
+                <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
+                <div class="price">Rp 20.000 / permanen</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="20000">Pilih Paket</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <!-- KATEGORI 3: Sewa Bot Vvip -->
+        <div class="accordion shine" data-acc>
+          <div class="acc-head" role="button" aria-expanded="false">
+            <div>
+              <div class="acc-title">🤖 Sewa Bot Vvip</div>
+              <div class="acc-desc">Bot WhatsApp siap pakai, 24 online</div>
+            </div>
+            <svg class="chev" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+          </div>
+          <div class="acc-body">
+            <div class="acc-body-inner">
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Vvip</div>
+                <div class="muted">Mendapatkan Limit Tanpa Batas & Premium Untuk 1 Group</div>
+                <div class="price">Rp 7.000 / 2 Minggu</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Vvip" data-price="7000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Vvip</div>
+                <div class="muted">Mendapatkan Limit Tanpa Batas & Premium Untuk 1 Group</div>
+                <div class="price">Rp 13.000 / 1 bln</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Vvip" data-price="13000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Vvip</div>
+                <div class="muted">Mendapatkan Limit Tanpa Batas & Premium Untuk 1 Group</div>
+                <div class="price">Rp 19.000 / 2 bln</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Vvip" data-price="19000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="badge">Bot WhatsApp</div>
+                <div class="title">Bot Vvip</div>
+                <div class="muted">Mendapatkan Limit Tanpa Batas & Premium Untuk 1 Group</div>
+                <div class="price">Rp 28.000 / permanen</div>
+                <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Vvip" data-price="28000">Pilih Paket</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- KATEGORI 4: Jadi Bot -->
+        <div class="accordion shine" data-acc>
+          <div class="acc-head" role="button" aria-expanded="false">
+            <div>
+              <div class="acc-title">🧩 Jadi Bot</div>
               <div class="acc-desc">Custom fitur, integrasi API, panel admin</div>
             </div>
             <svg class="chev" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
@@ -200,28 +293,40 @@
           <div class="acc-body">
             <div class="acc-body-inner">
               <div class="card">
-                <div class="title">Starter</div>
-                <div class="muted">Basic command & docs</div>
-                <div class="price">Rp 150.000</div>
-                <button class="btn-primary" data-select data-cat="Jasa Bikin Bot" data-plan="Starter" data-price="150000">Pilih Paket</button>
+                <div class="title">Jadi Bot Basic</div>
+                <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
+                <div class="price">Rp 10.000 / 1 Minggu</div>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Basic" data-price="10000">Pilih Paket</button>
               </div>
               <div class="card">
-                <div class="title">Business</div>
-                <div class="muted">Integrasi pembayaran</div>
-                <div class="price">Rp 350.000</div>
-                <button class="btn-primary" data-select data-cat="Jasa Bikin Bot" data-plan="Business" data-price="350000">Pilih Paket</button>
+                <div class="title">Jadi Bot Standart</div>
+                <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
+                <div class="price">Rp 20.000 / 2 Minggu</div>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Standart" data-price="20000">Pilih Paket</button>
               </div>
               <div class="card">
-                <div class="title">Ultimate</div>
-                <div class="muted">Full custom + panel admin</div>
-                <div class="price">Rp 700.000</div>
-                <button class="btn-primary" data-select data-cat="Jasa Bikin Bot" data-plan="Ultimate" data-price="700000">Pilih Paket</button>
+                <div class="title">Jadi Bot Premium</div>
+                <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
+                <div class="price">Rp 30.000 / 3 Minggu</div>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Premium" data-price="30000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Jadi Bot Vvip</div>
+                <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
+                <div class="price">Rp 40.000 / 1 Bulan</div>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Vvip" data-price="40000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Jadi Bot Ultimate</div>
+                <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
+                <div class="price">Rp 50.000 / Permanen</div>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Ultimate" data-price="50000">Pilih Paket</button>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- KATEGORI 3: Panel Pterodactyl -->
+        <!-- KATEGORI 5: Panel Pterodactyl -->
         <div class="accordion shine" data-acc>
           <div class="acc-head" role="button" aria-expanded="false">
             <div>
@@ -254,7 +359,7 @@
           </div>
         </div>
 
-        <!-- KATEGORI 4: VPS -->
+        <!-- KATEGORI 6: VPS -->
         <div class="accordion shine" data-acc>
           <div class="acc-head" role="button" aria-expanded="false">
             <div>
@@ -313,7 +418,7 @@
         <div class="help">Cek preview dulu, lalu tekan Kirim. Data hanya dipakai untuk proses pesanan.</div>
         <div class="actions">
           <button class="btn-primary" id="previewMsg">Lihat Preview Pesan</button>
-          <button class="btn-wa" id="kirimBtn">Kirim</button>
+          <button class="btn-primary" id="kirimBtn">Kirim</button>
         </div>
         <div class="help" id="previewBox" style="display:none; margin-top:10px; white-space:pre-wrap"></div>
       </div>
@@ -321,7 +426,7 @@
   </main>
 
   <footer>
-    © <span id="year"></span> HostoX. Dibuat dengan cinta dan sedikit kafein.
+    © <span id="year"></span> AissOfficial. Dibuat agar memudahkan pembeli.
   </footer>
 
   <script>
@@ -379,7 +484,7 @@
         </div>
         <div>
           <label for="grup">Link Grup</label>
-          <input type="url" id="grup" placeholder="https://chat.whatsapp.com/... atau link Telegram" required />
+          <input type="url" id="grup" placeholder="https://chat.whatsapp.com/" required />
           <div class="error" id="grupErr">Link grup tidak valid.</div>
         </div>`;
       }
@@ -428,7 +533,7 @@
           </select>
         </div>`;
       }
-      // default untuk Jasa Bikin Bot
+      // default untuk Jadi Bot
       return `
       <div>
         <label for="nama">Nama</label>
@@ -437,8 +542,13 @@
       </div>
       <div>
         <label for="hp">Nomor HP</label>
-        <input type="tel" id="hp" placeholder="08xxx / +62xxx" required />
+        <input type="tel" id="hp" placeholder="08xxx / 62xxx" required />
         <div class="error" id="hpErr">Nomor HP tidak valid.</div>
+      </div>
+      <div>
+        <label for="hpBot">Nomor HP Bot</label>
+        <input type="tel" id="hpbot" placeholder="08xxx / 62xxx" required />
+        <div class="error" id="hpbotErr">Nomor HP tidak valid.</div>
       </div>`;
     }
 
@@ -476,12 +586,14 @@
     function validateHP(){ const el = document.getElementById('hp'); const err = document.getElementById('hpErr'); if(!el) return true; const v = el.value.replace(/\s|-/g,''); const ok = /^\+?\d{9,15}$/.test(v) || /^0\d{9,13}$/.test(v); show(err,!ok); return ok; }
     function validateGrup(){ const el = document.getElementById('grup'); const err = document.getElementById('grupErr'); if(!el) return true; try{ const u = new URL(el.value); const ok = /^https?:/.test(u.protocol); show(err,!ok); return ok; }catch(e){ show(err,true); return false; } }
     function validatePass(){ const el = document.getElementById('password'); const err = document.getElementById('passErr'); if(!el) return true; const v = el.value; const ok = v.length >= 8 && /[a-z]/.test(v) && /[A-Z]/.test(v) && /\d/.test(v); show(err,!ok); return ok; }
-
+    function validateHPBot(){ const el = document.getElementById('hpBot'); const err = document.getElementById('hpBotErr'); if(!el) return true; const v = el.value.replace(/\s|-/g,''); const ok = /^\+?\d{9,15}$/.test(v) || /^0\d{9,13}$/.test(v); show(err,!ok); return ok; }
+    
     function guard(){
       if(!picked){ alert('Silakan pilih paket terlebih dulu.'); return false; }
       const cat = picked.cat;
       const okNama = validateNama();
       const okHP = validateHP();
+      const okHPBot = validateHPBot();
       const okGrup = (cat === 'Sewa Bot') ? validateGrup() : true;
       const okPass = (cat === 'Panel') ? validatePass() : true;
       return okNama && okHP && okGrup && okPass;
@@ -518,9 +630,10 @@
         teks += `Nama : ${nama}\n`;
         teks += `No HP : ${hp}\n`;
         teks += `Region : ${region}\n`;
-      } else { // Jasa Bikin Bot
+      } else { // Jadi Bot
         teks += `Nama : ${nama}\n`;
         teks += `No HP : ${hp}\n`;
+        teks += `No Hp Bot : ${hpBot}\n`
       }
 
       teks += `Platform : ${platform.toUpperCase()}\n`;
@@ -534,7 +647,7 @@
       window.open(url, '_blank');
     }
     function openTG(text){
-      const url = 'https://t.me/share/url?url=' + encodeURIComponent('') + '&text=' + encodeURIComponent(text);
+      const url = 'https://t.me/AISSOFFICIALL?url=' + encodeURIComponent('') + '&text=' + encodeURIComponent(text);
       window.open(url, '_blank');
     }
 
